--- a/link_4.html
+++ b/link_4.html
@@ -67,7 +67,7 @@
     <a href="link_1.html">백구</a>
     <a href="link_2.html">치와와</a>
     <a href="link_3.html">닥스훈트</a>
-    <a href="link_4.html">치와와</a>
+    <a href="link_4.html">말티즈</a>
   </div>
 
 <div class="main">
@@ -77,7 +77,7 @@
 </div>
 
 <div class="right">
-  <h2>치와와</h2>
+  <h2></h2>
   <img src="img/dog_4.jpg">
 </div>
 
