--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="link_1.html">백구</a>
         <a href="link_2.html">치와와</a>
         <a href="link3.html">닥스훈트</a>
-        <a href="link4.html">치와와</a>
+        <a href="link4.html"></a>
       </div>
       <div class="main">
         <h2>강아지들</h2>
