--- a/link_4.html
+++ b/link_4.html
@@ -71,7 +71,7 @@
   </div>
 
 <div class="main">
-  <h2>치와와</h2>
+  <h2>말티즈</h2>
   <p name="pp">작은 체구와 깨끗해 보이는 하얀 외모의 애완견으로 아주 귀엽고 인기가 많아서 한국에서 포메라니안과 함께 반려견으로 가장 많이 길러지는 종이다.
     하지만 소형견이 겪을 수 있는 대부분의 질병에 모두 취약해서 키울 때 생각보다 애로 사항이 많다.</p>
 </div>
