--- a/link_2.html
+++ b/link_2.html
@@ -67,7 +67,7 @@
     <a href="link_1.html">백구</a>
     <a href="link_2.html">치와와</a>
     <a href="link_3.html">닥스훈트</a>
-    <a href="link_4.html">치와와</a>
+    <a href="link_4.html"></a>
   </div>
 
 <div class="main">
