--- a/link_2.html
+++ b/link_2.html
@@ -59,7 +59,7 @@
   <body style="font-family: Verdana; color:#aaaaaa;">
 
 <div style="background-color:#e5e5e5; padding:15px; text-align:center;">
-  <h1>Hello World</h1>
+  <h1>귀여운 강아지</h1>
 </div>
 
 <div style="overflow:auto">
