--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         text-align:center;
       }
       .menu a{
-        background-color:#e5e5e5;
+        background-color:#f55354;
         padding:8px;
         margin-top:7px;
         display:block;
