--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         text-align:center;
       }
       .menu a{
+        text-decoration:none;
         background-color:#f55354;
         padding:8px;
         margin-top:7px;
