--- a/link_2.html
+++ b/link_2.html
@@ -21,7 +21,8 @@
 
 .menu a
 {
-  background-color: #e5e5e5;
+  text-decoration:none;
+  background-color: #f55354;
   padding: 8px;
   margin-top: 7px;
   display: block;
