--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 }
     </style>
   </head>
-  <body style="font-family:Verdana;color:#aaaaaa;">
+  <body style="font-family:Verdana;color:#ff9797;">
 
     <div style="background-color:#e5e5e5;padding:15px;text-align:center;">
       <h1>귀여운 강아지</h1>
