--- a/link_2.html
+++ b/link_2.html
@@ -59,7 +59,7 @@
   </head>
   <body style="font-family: Verdana; color:#ff9797;">
 
-<div style="background-color:#e5e5e5; padding:15px; text-align:center;">
+<div style="background-color:#f55354; padding:15px; text-align:center;">
   <h1>귀여운 강아지</h1>
 </div>
 
