--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         margin-top:7px;
         display:block;
         width:100%;
-        color:black;
+        color:7668AC;
       }
       .main{
         float:left;
